# src/router/auth.js
@@ -11,6 +11,7 @@ router.route("/login").post(auth.login);
 router.route("/requestEmailToken").post(auth.requestEmailToken);
 router.route("/verifyEmail").post(auth.verifyEmail);
 router.route("/forgotPassword").post(auth.forgotPassword);
+router.route("/googleAuth").post(auth.googleAuth);
 //put
 router.route("/resetPassword").put(auth.resetPassword);
 router.route("/updatePassword").put(isAuthenticated, auth.updatePassword);
