# swagger_output.json
@@ -1,8 +1,8 @@
 {
   "swagger": "2.0",
   "info": {
-    "title": "Cloudfront",
-    "description": "Cloudfront api endpoints",
+    "title": "LOGDN-REVIVAL",
+    "description": "logdn-revival endpoints",
     "version": "1.0.0"
   },
   "host": "localhost:8001",
@@ -149,6 +149,38 @@
               "type": "object",
               "properties": {
                 "email": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {}
+      }
+    },
+    "/auth/googleAuth": {
+      "post": {
+        "tags": [
+          "auth"
+        ],
+        "description": "",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "email": {
+                  "example": "any"
+                },
+                "name": {
+                  "example": "any"
+                },
+                "profilePic": {
+                  "example": "any"
+                },
+                "emailVerified": {
                   "example": "any"
                 }
               }
